--- a/terraform/modules/monitoring/values.yaml
+++ b/terraform/modules/monitoring/values.yaml
@@ -5,6 +5,31 @@ additionalScrapeConfigs:
       - targets:
           - sqli-detector.sqli-lab.svc.cluster.local:8000
 
+alertmanager:
+  config:
+    global:
+      resolve_timeout: 5m
+    route:
+      receiver: discord-sqli
+      routes:
+        - match:
+            alertname: SQLInjectionDetected
+          receiver: discord-sqli
+    receivers:
+      - name: discord-sqli
+        slack_configs:
+          - api_url: "https://discord.com/api/webhooks/1446090054580568084/mLUaar9QmGEVostzwe-QofzGn6W8jDzHPimCSoPzAcMOiuAVfYFOrG6jjM1EkK1tQic1/slack"
+            send_resolved: true
+            username: "SQLi Sentinel"
+            icon_emoji: ":rotating_light:"
+            title: "{{ .CommonLabels.alertname }} — {{ .CommonLabels.severity | toUpper }}"
+            text: "*Status:* {{ .Status | toUpper }}\n*Namespace:* {{ .CommonLabels.namespace }}\n*Alerts:*\n{{ range .Alerts }}• *{{ .Labels.pod | default \"N/A\" }}* — {{ .Annotations.summary }}\n  {{ .Annotations.description }}\n{{ end }}"
+            title_link: "{{ .ExternalURL }}/#/alerts?receiver=discord-sqli"
+            footer: "Prometheus › {{ .ExternalURL }}"
+            mrkdwn_in: ["text"]
+            attachments:
+              - color: '{{ if eq (or .CommonLabels.severity "") "critical" }}#e11d48{{ else if eq (or .CommonLabels.severity "") "warning" }}#f59e0b{{ else }}#3b82f6{{ end }}'
+
 additionalPrometheusRulesMap:
   sqli-rules:
     groups:
